--- a/index.html
+++ b/index.html
@@ -346,6 +346,13 @@
                     </div>
                 </div>
                 <div class="footer-section">
+                    <div class="footer-section">
+                             <h3 class="footer-title">Desenvolvimento</h3>
+                             <div class="footer-links">
+                                 <a href="n8n-install.html" class="footer-link">Instalar n8n</a>
+                                 <a href="#" class="footer-link">Documentação API</a>
+                             </div>
+                         </div>
                     <h3 class="footer-title">Baixe o App</h3>
                     <p>Disponível para iOS e Android</p>
                     <button class="install-btn" id="installButton">
@@ -372,6 +379,7 @@
 <!-- NO FINAL DO BODY - REMOVA MIDI.js E USE TONE.JS -->
 <!-- NO FINAL DO BODY -->
  <script src="https://cdn.jsdelivr.net/gh/grimmdude/MIDI.js@master/js/MIDI/Player.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/timidity@0.3.0/timidity.min.js"></script>
  
 
 <!--<script src="https://cdn.jsdelivr.net/npm/midijs@2.0.0/dist/MIDIJS.min.js"></script>-->
